# msi-keyboard-app

./: .clang-format  .clang-tidy  .gitignore  .gitleaks.toml  CMakeLists.txt  LICENSE  README.md  Taskfile.yml
.github/workflows/: ci.yml  release.yml
cmake/: DeviceDefinitions.cmake  GenerateUdevRules.cmake  Packaging.cmake
config/: devices.json  protocol.example.json
docs/: packaging.md  protocol.md  supported-devices.md
packaging/: 70-msi-strike-pro.rules  io.github.kordax.MsiKeyboard.desktop  io.github.kordax.MsiKeyboard.metainfo.xml
packaging/debian/: postinst
packaging/rpm/: post-uninstall.sh
scripts/linux/: install-quality-tools.sh  install-udev-rule.sh  uninstall-udev-rule.sh  verify-wayland.sh
src/: main.cpp
src/cli/: CliRunner.cpp  CliRunner.h
src/device/: AppPaths.cpp  AppPaths.h  BatteryDecoder.cpp  BatteryDecoder.h  DeviceCatalog.cpp  DeviceCatalog.h  DeviceDefinitions.cpp  DeviceDefinitions.h  HidDeviceScanner.cpp  HidDeviceScanner.h  HidMonitor.cpp  HidMonitor.h  HidTypes.h
src/gui/: BatteryGauge.cpp  BatteryGauge.h  DebugWindow.cpp  DebugWindow.h  MainWindow.cpp  MainWindow.h  TrayIndicator.cpp  TrayIndicator.h
src/i18n/: LanguageManager.cpp  LanguageManager.h
src/update/: UpdaterCore.cpp  UpdaterCore.h  UpgradeRunner.cpp  UpgradeRunner.h
tests/: BatteryDecoderTest.cpp  BatteryGaugeTest.cpp  DesktopEnvironmentTest.cpp  DeviceCatalogTest.cpp  DeviceDefinitionsTest.cpp  HidMonitorTest.cpp  LocalizationTest.cpp  TrayIndicatorTest.cpp  UpdaterCoreTest.cpp
translations/: msi-keyboard_ru.ts
